# HomeSensorESP32

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
components/common/include/: commonData.h  commonEvent.h  commonLvgl.h  commonOs.h  commonStd.h
components/communication/: CMakeLists.txt
components/communication/communication/: Ccommunication.cpp
components/communication/communication/include/: CCommunication.h
components/communication/jsonBuilder/: CJsonBuilder.cpp
components/communication/jsonBuilder/include/: CJsonBuilder.h  CMeasurementsBuilder.h  CMeasurementsMultipleBuilder.h  CMeasurmentsBuilder.h  CSettingsBuilder.h  IJsonBuilder.h
components/communication/jsonBuilder/priv_include/: CMeasurmentsBuilder.h  CSettingsBuilder.h  IJsonBuilder.h
components/config/: CLoggerConfig.cpp  CMakeLists.txt
components/config/include/: CLoggerConfig.h
components/control/: CControl.cpp  CMakeLists.txt
components/control/include/: CControl.h
components/halesp32/: CMakeLists.txt
components/halesp32/adc/: CAdc.cpp
components/halesp32/adc/include/: CAdc.h  IAdc.h
components/halesp32/bme280/: CBme280.cpp  bmx280.c
components/halesp32/bme280/include/: CBme280.h  IBme280.h  SBme280.h
components/halesp32/halEspressif32Factory/: CHalEspressifFactory.cpp
components/halesp32/halEspressif32Factory/include/: CHalEspressifFactory.h
components/halesp32/https/httpsClient/: CHttpsClient.cpp  SHttpsClientRequest.cpp
components/halesp32/https/httpsClient/include/: CHttpsClient.h  IHttpsClient.h  IHttpsClientCallback.h  SHttpsClientRequest.h
components/halesp32/lowPower/: CLowPower.cpp
components/halesp32/lowPower/include/: CLowPower.h
components/halesp32/storage/: CStorage.cpp
components/halesp32/storage/include/: CStorage.h  IStorage.h
components/halesp32/wifi/: CWifi.cpp
components/halesp32/wifi/include/: CWifi.h  IWifi.h
components/hardware/: CHardware.cpp  CMakeLists.txt
components/hardware/hardware/: CHardware.cpp
components/hardware/hardware/include/: CHardware.h
components/hardware/include/: CHardware.h
components/hardware/measQueue/: CMeasQueue.cpp
components/hardware/measQueue/include/: CMeasQueue.h
components/lvgl/src/core/: lv_refr.c
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: FT81x.c  GC9A01.c  GC9A01.h  disp_driver.c  disp_driver.h  disp_spi.c
components/lvgl_esp32_drivers/lvgl_touch/: touch_driver.h
components/utility/: CMakeLists.txt
components/utility/baseQueue/: CBaseQueue.cpp  CMessageQueue.cpp
components/utility/baseQueue/include/: CBaseQueue.h  CMessageQueue.h
components/utility/baseSemaphore/: CBaseSemaphore.cpp
components/utility/baseSemaphore/include/: CBaseSemaphore.h
components/utility/baseTask/: CBaseTask.cpp
components/utility/baseTask/include/: CBaseTask.h
components/utility/eventManager/: IEventPublisherManager.cpp
components/utility/eventManager/include/: EventHelper.h  IEventListener.h  IEventPublisher.h  IEventPublisherManager.h  SEvent.h
components/utility/logger/: CLogger.cpp  CLoggerHelper.cpp
components/utility/logger/include/: CLogger.h  CLoggerHelper.h
main/: CMakeLists.txt  ESP32_HomeSensor.cpp
scripts/: run-code-format.sh
